--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Picture puzzle game</title>
+    <script type="text/javascript" src="../dist/PicturePuzzle.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -10,11 +11,12 @@
 
 <div id="puzzle-wrapper">
     <div>
-        <h1>3x3</h1>
+        <h1>Hi, cái ảnh này cũng xinh này :v:v</h1>
+        <h2 id='step'></h2>
     </div>
-    <div>
-        <h1>4x4</h1>
-    </div>
+    <!-- <div>
+        <h1>Cái này còn khó hơn :v:v:v</h1>
+    </div> -->
 </div>
 
 <!-- Modal -->
@@ -28,7 +30,7 @@
         <div class="content">
             <div class="good-job">
                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                <h1>Good Job!</h1>
+                <h1>Gút chóp :v</h1>
             </div>
         </div>
     </div>
